@startuml
skinparam classAttributeIconSize 0
hide circle
hide empty members

skinparam class {
    BackgroundColor AliceBlue
    ArrowColor Black
    BorderColor Black
}

    class Storage {
        - logger: Logger
        - filePath: String
        + Storage(filePath: String)
        + save(budget: double, expenses: ArrayList<Expense>, loans: ArrayList<Loan>, categoryBudgets: HashMap<String, Double>): void
        + load(): StorageData
    }

    class StorageData {
        + budget: double
        + expenses: ArrayList<Expense>
        + loans: ArrayList<Loan>
        + categoryBudgets: HashMap<String, Double>
        + StorageData(budget: double, expenses: ArrayList<Expense>, loans: ArrayList<Loan>, categoryBudgets: HashMap<String, Double>)
    }



    abstract class Expense <<abstract>> {
        - description: String
        - amount: double
        - date: LocalDate
        + getDescription(): String
        + getAmount(): double
        + getDate(): LocalDate
    }
    class Food extends Expense
    class Transport extends Expense
    class Groceries extends Expense
    class Others extends Expense
    class Loan extends Expense

    class IOException <<exception>>




' Relationships
Storage "1" --> "1" StorageData
Storage ..> Expense
Storage ..> IOException
StorageData "1" o-- "*" Expense


@enduml